; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_fps_counter.c_fps_counter_add_rendered_frame.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_fps_counter.c_fps_counter_add_rendered_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fps_counter = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fps_counter_add_rendered_frame(%struct.fps_counter* %0) #0 {
  %2 = alloca %struct.fps_counter*, align 8
  %3 = alloca i32, align 4
  store %struct.fps_counter* %0, %struct.fps_counter** %2, align 8
  %4 = load %struct.fps_counter*, %struct.fps_counter** %2, align 8
  %5 = getelementptr inbounds %struct.fps_counter, %struct.fps_counter* %4, i32 0, i32 2
  %6 = call i32 @SDL_AtomicGet(i32* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %26

9:                                                ; preds = %1
  %10 = load %struct.fps_counter*, %struct.fps_counter** %2, align 8
  %11 = getelementptr inbounds %struct.fps_counter, %struct.fps_counter* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @mutex_lock(i32 %12)
  %14 = call i32 (...) @SDL_GetTicks()
  store i32 %14, i32* %3, align 4
  %15 = load %struct.fps_counter*, %struct.fps_counter** %2, align 8
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @check_interval_expired(%struct.fps_counter* %15, i32 %16)
  %18 = load %struct.fps_counter*, %struct.fps_counter** %2, align 8
  %19 = getelementptr inbounds %struct.fps_counter, %struct.fps_counter* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %19, align 4
  %22 = load %struct.fps_counter*, %struct.fps_counter** %2, align 8
  %23 = getelementptr inbounds %struct.fps_counter, %struct.fps_counter* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @mutex_unlock(i32 %24)
  br label %26

26:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @SDL_AtomicGet(i32*) #1

declare dso_local i32 @mutex_lock(i32) #1

declare dso_local i32 @SDL_GetTicks(...) #1

declare dso_local i32 @check_interval_expired(%struct.fps_counter*, i32) #1

declare dso_local i32 @mutex_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
